# ultimate-asepharyana-tech-rust

./: AGENT.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  TASK_1_COMPLETION.md  TASK_1_EVIDENCE.md  TASK_3_AUDIT.md  TASK_3_AUDIT_SUMMARY.md  TASK_4_STRATEGY.md  build.rs  test-output.txt
.github/workflows/: notify-parent.yml
build_utils/: auto_mod_generator.rs  constants.rs  handler_updater.rs  mod.rs  mod_generator.rs  openapi_generator.rs  path_utils.rs  route_scanner.rs  template_generator.rs
docs/: api_reference.md  development.md  observability.md  performance_todo.md  proxy_cdn.md  scraping.md
docs/superpowers/plans/: 2026-05-08-refactor-clean-architecture.md
docs/superpowers/specs/: 2026-05-08-clean-architecture-design.md
src/: lib.rs
src/application/: error.rs  mod.rs  ratelimit.rs  types.rs
src/application/services/images/: cache.rs
src/application/use_cases/: cache_image.rs
src/bootstrap/: mod.rs
src/browser/: pool.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/core/models/: mod.rs  types.rs
src/core/repositories/: image_repository.rs  mod.rs  scraping_repository.rs
src/core/services/images/: cache.rs
src/core/use_cases/: cache_image.rs  mod.rs
src/domain/entities/: anime.rs  image.rs  mod.rs  types.rs
src/domain/repositories/: image_cache.rs  image_repository.rs  mod.rs
src/entities/: mod.rs  prelude.rs
src/graceful/: cleanup.rs
src/graphql/: schema.rs
src/health/: endpoints.rs
src/helpers/data/: mod.rs
src/helpers/dev/: mod.rs
src/helpers/infra/: mod.rs
src/helpers/web/: scraping.rs  validation.rs
src/infra/: db_setup.rs  http_client.rs  image_proxy.rs  mod.rs  proxy.rs  redis.rs
src/infra/persistence/entities/: image_cache.rs  mod.rs
src/infra/repositories/: image_cache.rs  mod.rs  mysql_image_repository.rs
src/infra/scrapers/: otakudesu.rs
src/middleware/: logging.rs
src/models/: anime2.rs  mod.rs
src/observability/: metrics.rs  mod.rs  openapi.rs  openapi_generated.rs
src/presentation/api/: anime_handler.rs  mod.rs
src/presentation/api/anime/: genre_list.rs  index.rs  mod.rs
src/presentation/api/anime/complete_anime/: [slug].rs
src/presentation/api/anime/detail/: [slug].rs
src/presentation/api/anime/full/: [slug].rs
src/presentation/api/anime/latest/: [slug].rs
src/presentation/api/anime/ongoing_anime/: [slug].rs
src/presentation/api/anime2/: filter.rs  genre_list.rs  index.rs  mod.rs
src/presentation/api/anime2/complete_anime/: [slug].rs
src/presentation/api/anime2/detail/: [slug].rs
src/presentation/api/anime2/latest/: [slug].rs
src/presentation/api/anime2/ongoing_anime/: [slug].rs
src/presentation/api/komik/: genre_list.rs  mod.rs
src/presentation/api/komik/chapter/: [slug].rs
src/presentation/api/komik/detail/: [slug].rs
src/presentation/api/komik/genre/: mod.rs
src/presentation/api/komik/manga/: [slug].rs
src/presentation/api/komik/manhua/: [slug].rs
src/presentation/api/komik/manhwa/: [slug].rs  mod.rs
src/presentation/api/komik/popular/: [slug].rs
src/presentation/api/proxy/: croxy.rs  image_cache.rs  mod.rs
src/presentation/state/: mod.rs
src/routes/: mod.rs
src/routes/api/: mod.rs
src/routes/api/anime/: genre_list.rs  index.rs  latest.rs  mod.rs  search.rs
src/routes/api/anime/complete_anime/: [slug].rs  slug.rs
src/routes/api/anime/detail/: [slug].rs  mod.rs  slug.rs
src/routes/api/anime/full/: [slug].rs  slug.rs
src/routes/api/anime/genre/: slug.rs
src/routes/api/anime/latest/: [slug].rs
src/routes/api/anime2/: filter.rs  genre_list.rs  index.rs  latest.rs  search.rs
src/routes/api/auth/: forgot_password.rs  register.rs
src/routes/api/komik/: chapter.rs  detail.rs  genre_list.rs  popular.rs  search.rs
src/routes/api/proxy/: croxy.rs  image_cache.rs
src/routes/api/tools/: compress.rs  drivepng.rs  uploader.rs
src/scheduler/: cleanup_cache.rs  cleanup_rooms.rs  mod.rs  runner.rs
src/scraping/: anime2.rs  urls.rs
src/scraping/anime/: cache.rs
src/services/images/: cache.rs
src/shared/errors/: mod.rs
src/shared/utils/: mod.rs
src/shared/utils/core/: api_response.rs  handler.rs  prelude.rs
src/shared/utils/data/: string.rs  text.rs
src/shared/utils/infra/: ryzen_cdn.rs  searchable.rs
src/shared/utils/io/: cache.rs  soft_delete.rs
src/shared/utils/web/: mod.rs  scraping.rs
src/ws/: handler.rs
(+60 files in other folders)
